--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,11 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        generatedDensities = []
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    aaptOptions {
+        additionalParameters "--no-version-vectors"
     }
     buildTypes {
         release {
@@ -18,6 +22,7 @@ android {
     }
 }
 
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -25,7 +30,7 @@ dependencies {
     })
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.firebaseui:firebase-ui-database:0.4.0'
+    implementation 'com.firebaseui:firebase-ui-database:1.2.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
@@ -39,10 +44,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.firebase:firebase-crash:16.2.1'
+    implementation 'com.jakewharton:butterknife:8.5.1'
+
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
+
     implementation 'pub.devrel:easypermissions:0.1.5'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
     implementation 'de.hdodenhof:circleimageview:2.0.0'
-
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.1'
     implementation 'com.android.support:support-v4:'
     implementation 'com.squareup.picasso:picasso:2.5.2'
@@ -51,6 +60,7 @@ dependencies {
     implementation 'com.balysv.materialmenu:material-menu:2.0.0'
     implementation 'com.github.jrvansuita:PickImage:2.1.1'
     testImplementation 'junit:junit:4.12'
+
 }
 
 
