--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     aaptOptions {
@@ -46,7 +47,8 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
-
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'pub.devrel:easypermissions:0.1.5'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
     implementation 'de.hdodenhof:circleimageview:2.0.0'
