--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,6 @@ dependencies {
     })
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.firebaseui:firebase-ui-database:1.2.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
@@ -38,14 +37,10 @@ dependencies {
     implementation 'com.android.support:percent:28.0.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
-    implementation 'com.google.firebase:firebase-storage:16.0.5'
-    implementation 'com.google.firebase:firebase-common:16.0.4'
-    implementation 'com.google.firebase:firebase-auth:16.1.0'
-    implementation 'com.google.firebase:firebase-core:16.0.6'
-    implementation 'com.google.firebase:firebase-database:16.0.5'
-    implementation 'com.google.firebase:firebase-crash:16.2.1'
     implementation 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta4'
+
 
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation 'com.loopj.android:android-async-http:1.4.9'
