--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/netwrok_security_config"
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
@@ -29,6 +30,9 @@
         </activity>
 
         <activity android:name=".SplashActivity">
+
+        </activity>
+        <activity android:name=".OwnerPendingBookings">
 
         </activity>
 
@@ -82,14 +86,6 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".identity_arabic"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            >
-
-        </activity>
-        <activity
             android:name=".Loginowner"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
@@ -134,25 +130,6 @@
         </activity>
 
 
-        <activity
-            android:name=".Searcharabic"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            >
-
-        </activity>
-
-        <activity
-            android:name=".Splasharabic"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            >
-
-        </activity>
-
-
-</application>
+    </application>
        
 </manifest>
