--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 
@@ -55,6 +59,11 @@ dependencies {
     implementation 'com.balysv.materialmenu:material-menu:2.0.0'
     implementation 'com.github.jrvansuita:PickImage:2.1.1'
     testImplementation 'junit:junit:4.12'
+
+    implementation "androidx.navigation:navigation-fragment:2.2.0"
+    implementation "androidx.navigation:navigation-ui:2.2.0"
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 
 
 }
