--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     dataBinding {
         enabled = true
     }
+
 }
+
 
 
 dependencies {
@@ -36,7 +42,6 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:percent:28.0.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
@@ -44,15 +49,18 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     implementation 'com.android.support.constraint:constraint-layout:2.0.0-beta4'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0-beta01"
+
 
 
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'pub.devrel:easypermissions:0.1.5'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
-    implementation 'de.hdodenhof:circleimageview:2.0.0'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.1'
-    implementation 'com.android.support:support-v4:'
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.5'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.daimajia.slider:library:1.1.5@aar'
@@ -64,8 +72,10 @@ dependencies {
     implementation "androidx.navigation:navigation-ui:2.2.0"
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'androidx.databinding:databinding-runtime:3.5.3'
 
-
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
 }
 
 
