--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.3'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.0"
         classpath 'androidx.databinding:databinding-compiler:3.5.3'
+        classpath 'com.google.gms:google-services:1.5.0-beta2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
