--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,9 @@ android {
 }
 
 
-
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -53,7 +53,6 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     // For control over item selection of both touch and mouse driven selection
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-beta01"
-
 
 
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
@@ -85,5 +84,3 @@ dependencies {
 
 
 }
-
-
